...

extension ChooseStyle: Presentable {
    typealias ChooseStyleResult = (PresentationStyle, preferredPresenter: UIViewController?, alertToPresent: Alert<()>?)
    
    func materialize() -> (UIViewController, Signal<ChooseStyleResult>) {
        let viewController = UIViewController()
        viewController.title = "Presentation Styles"

        let containerForEmbeddingViews = UIView()
        containerForEmbeddingViews.backgroundColor = .white

        let tableView = UITableView()
        
...
