...
                                      style: .modally(presentationStyle: .formSheet),
                                      options: [.embedInNavigationController, .dontWaitForDismissAnimation]).onValue { message in
            messagesSignal.value.insert(message, at: 0)
        }

        messageDetails = { message in
            let cancel = Alert.Action(title: "Cancel") { }
            let delete = Alert.Action(title: "Delete") {
                guard let i = messagesSignal.value.index(of: message) else { return }
                messagesSignal.value.remove(at: i)
            }
            let deleteAlert = Alert(title: "Delete message", message: "Are you sure you want to delete the message?", actions: cancel, delete)

...
