...
    }
}

extension ChoosePresentationOptions: Presentable {
    public func materialize() -> (UIViewController, Signal<PresentationOptions>) {
        let viewController = UITableViewController()
        viewController.title = "Presentation Options"

        let result = viewController.configure(dataSource: createDataSource(), delegate: Delegate())

        return (viewController, result.map { $0.value } )
    }
}
...
